@@ -86,7 +86,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
@@ -408,7 +407,7 @@ class TaskManagementServiceUnitTest extends CamundaHelpers {
             List<String> logsList = List.copyOf(listAppender.list)
                 .stream()
                 .map(ILoggingEvent::getFormattedMessage)
-                .collect(Collectors.toList());
+                .toList();
             assertTrue(logsList.contains("PersistenceException occurred in updating indexed field of taskId:"
                                              + taskId));
         }
